[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/UI/dialog_box.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/UI/NinepatchRect.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/dpcomic_dynamic.tres" type="DynamicFont" id=3]

[node name="DialogBox" type="Control" groups=[
"DialogBox",
]]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = -65.0
margin_right = -5.0
margin_bottom = -5.0
rect_min_size = Vector2( 0, 50 )
script = ExtResource( 1 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 302.0
margin_bottom = 52.0
custom_constants/separation = 0

[node name="MainText" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
margin_right = 302.0
margin_bottom = 52.0
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true

[node name="Advance" type="Button" parent="MarginContainer/VBoxContainer/MainText"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -20.0
margin_right = -1.0
custom_fonts/font = ExtResource( 3 )
text = ">"
flat = true

[node name="SelectionButtons" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 302.0
margin_bottom = 52.0
custom_constants/separation = -7
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainText/Advance" to="." method="set_button_portion"]
